<resources>
    <string name="app_name">BlogPhoto</string>
    <string name="login_logo">login logo</string>
    <string name="your_email">Your Email</string>
    <string name="password">password</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="login_to_account">Login to Account</string>
    <string name="action_logout_btn">Logout</string>
    <string name="account_settings_btn">Account Settings</string>
    <string name="action_search">Search</string>
    <string name="reg_logo">Create a new account</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_account">Already have an Account ?</string>
    <string name="password_confirm_doesnt_work">Confirm password and confirm password doesn\'t match !</string>
    <string name="name">Name</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="image_view_of_the_post">image view of the post</string>
    <string name="add_description">Add Description</string>
    <string name="post_blog">Post Blog</string>
    <string name="add_post">Add Post</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_account_text">Accounts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
